src/objects/REVVY__MnQuoteItem__c.object
<CustomObject>
    <fields>
        <fullName>REVVY__One_Time_Margin_F__c</fullName>
        <description>Margin (%) that is applied to a regular product that is billed one time. If the product is configurable, then the one time margin field is the adjustment on all sub-lines (e.g., the components) that are billed one time, including the margin on the main line if the main line is billed one time.</description>
        <formula>IF (BLANKVALUE(REVVY__One_Time_Total_Value_F__c,0)==0, 0,(REVVY__One_Time_Total_Value_F__c - REVVY__One_Time_Total_Cost_F__c)/REVVY__One_Time_Total_Value_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Margin that is applied to a regular product that is billed one time. If the product is configurable, then the one time margin field is the adjustment on all sub-lines (e.g., the components) that are billed one time, including the margin on the main line i</inlineHelpText>
        <label>One-time Margins (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Price_Before_Discount_Display_F__c</fullName>
        <formula>REVVY__One_Time_Price_Before_Discount_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Price_Before_Discount_F__c</fullName>
        <description>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a one-time basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;One Time&apos;,  BLANKVALUE(REVVY__Price__c, BLANKVALUE(REVVY__Unit_Price__c, 0))  +  REVVY__One_Time_Price_Before_Discount_S__c,  REVVY__One_Time_Price_Before_Discount_S__c)</formula>
        <inlineHelpText>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a one-time basis.</inlineHelpText>
        <label>One-time List including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Price_Before_Discount_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate list price of all sub-lines in a configurable product that are billed on a one-time basis, before any discounts are applied.</description>
        <inlineHelpText>Aggregate list price of all sub-lines in a configurable product that are billed on a one-time basis, before any discounts are applied.</inlineHelpText>
        <label>One-time List all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Total_Cost_F__c</fullName>
        <description>Aggregate cost price (cost x quantity) of all products that are billed on a one-time basis.</description>
        <formula>REVVY__One_Time_Cost_Price_Before_Adjustment_F__c * REVVY__Quantity__c</formula>
        <inlineHelpText>Aggregate cost price (cost price x quantity) of all products that are billed on a one-time basis.</inlineHelpText>
        <label>Total One Time Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Total_Value_Display_F__c</fullName>
        <formula>REVVY__One_Time_Total_Value_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Total Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Total_Value_F__c</fullName>
        <description>Aggregate extended price (unit price x quantity) of all products that are billed on a one-time basis after discounts have been applied.</description>
        <formula>REVVY__One_Time_Extended_Price_F__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate extended price (unit price x quantity) of all products that are billed on a one-time basis after discounts have been applied.</inlineHelpText>
        <label>One-time Total Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Unit_Price_F__c</fullName>
        <description>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a one-time basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;One Time&apos;, BLANKVALUE(REVVY__Unit_Price__c, 0) + REVVY__One_Time_Unit_Price_S__c, REVVY__One_Time_Unit_Price_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Unit_Price_S__c</fullName>
        <description>Aggregate unit price of all sub-lines in a configurable product that are billed on a one-time basis.</description>
        <inlineHelpText>Aggregate unit price of all sub-lines in a configurable product that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Unit Price including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Value_Before_Discount_F__c</fullName>
        <description>Aggregate extended price (unit price x quantity) of all products that are billed on a one-time basis before any discounts are applied.</description>
        <formula>REVVY__One_Time_Price_Before_Discount_F__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate extended price (unit price x quantity) of all products that are billed on a one-time basis before any discounts are applied.</inlineHelpText>
        <label>One-time Total List</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revvy Quoted Products</relationshipLabel>
        <relationshipName>QuoteItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__OptionNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort the quote items within a solution.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort the quote items within a solution.</inlineHelpText>
        <label>Option Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__OriginalContractId__c</fullName>
        <description>Original Contract ID applied to this quote item</description>
        <inlineHelpText>&gt;Original contract ID applied to this quote item</inlineHelpText>
        <label>Original Contract Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__OriginalContract__c</fullName>
        <description>Original Contract applied to this quote item</description>
        <inlineHelpText>&gt;Original contract applied to this quote item</inlineHelpText>
        <label>Original Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceListLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the Price List Line object used to derive the List Price for this product.</description>
        <inlineHelpText>Unique ID of the Price List Line object used to derive the List Price for this product.</inlineHelpText>
        <label>Price List Line</label>
        <referenceTo>REVVY__MnPriceListLine__c</referenceTo>
        <relationshipLabel>QuoteLineItem</relationshipLabel>
        <relationshipName>QuoteLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__PriceType__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Price_Display_F__c</fullName>
        <formula>REVVY__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price (Display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Price__c</fullName>
        <description>List price of product for this quote.</description>
        <inlineHelpText>List price of product for this quote.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__PricingRuleMapping__c</fullName>
        <description>JSON representation of the quote item pricing rule mapping in quote model.</description>
        <inlineHelpText>JSON representation of the quote item pricing rule mapping in quote model. Useful for debugging quote level pricing rules.</inlineHelpText>
        <label>Pricing Rule Mapping Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__PricingRuleReason__c</fullName>
        <description>JSON representation of the quote item pricing rule reason in quote model.</description>
        <inlineHelpText>JSON representation of the quote item pricing rule reason in quote model. Useful for debugging quote level pricing rules.</inlineHelpText>
        <label>Pricing Rule Reason Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__PricingSource__c</fullName>
        <description>Denotes the contract subtype / pricing list ID from medtech</description>
        <inlineHelpText>Denotes the contract subtype / pricing list ID from medtech</inlineHelpText>
        <label>Pricing Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__PrimaryCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary category for this product, used in gross profit analysis calculations.</description>
        <inlineHelpText>Primary category for this product, used in gross profit analysis calculations.</inlineHelpText>
        <label>Primary Category</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>QuoteItemPrimaryCategory</relationshipLabel>
        <relationshipName>QuoteItemPrimaryCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__ProductConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the model used to configure this product.</description>
        <inlineHelpText>Unique ID of the model used to configure this product.</inlineHelpText>
        <label>Item Configuration ID</label>
        <referenceTo>REVVY__MnConfigEngineModel__c</referenceTo>
        <relationshipLabel>QuoteItems</relationshipLabel>
        <relationshipName>QuoteItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Product_ID_F__c</fullName>
        <formula>REVVY__Catalog_Node__r.REVVY__Id__c</formula>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Product_Name_F__c</fullName>
        <formula>REVVY__Catalog_Node__r.REVVY__LocaleName_F__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Product_Type_F__c</fullName>
        <formula>IF (REVVY__Catalog_Node__r.REVVY__Configurable__c, &apos;Config&apos;,
IF (TEXT(REVVY__Catalog_Node__r.REVVY__Type__c) = &apos;Bundle&apos;, &apos;Bundle&apos;,
IF (TEXT(REVVY__Catalog_Node__r.REVVY__Billing_Frequency__c) != &apos;One Time&apos;, &apos;Services&apos;, &apos;Product&apos;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of units.</description>
        <inlineHelpText>Number of units.</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteItemSubLinesNeedApprovalCount__c</fullName>
        <label>Quote Item SubLines Need Approval Count</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__NeedsApproval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the solution that this quote item belongs to.</description>
        <inlineHelpText>Unique ID of the solution that this quote item belongs to.</inlineHelpText>
        <label>Quote Solution</label>
        <referenceTo>REVVY__MnQuoteSolution__c</referenceTo>
        <relationshipLabel>Solution Line Items</relationshipLabel>
        <relationshipName>Solution_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Quote__c</fullName>
        <description>Unique ID of the quote that this quote item belongs to.</description>
        <inlineHelpText>Unique ID of the quote that this quote item belongs to.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>QuoteItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__Record_Number__c</fullName>
        <description>Position number for this quote item.</description>
        <inlineHelpText>Position number for this quote item.</inlineHelpText>
        <label>Quote Item Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__SapPlant__c</fullName>
        <description>Sap Plant for this product.</description>
        <inlineHelpText>Configit Quote ID for this record.</inlineHelpText>
        <label>Sap Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__SectionNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields  are used internally to sort the quote items within a solution.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields  are used internally to sort the quote items within a solution.</inlineHelpText>
        <label>Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__Solution_Name_F__c</fullName>
        <formula>REVVY__QuoteSolution__r.REVVY__Solution_Name_F__c</formula>
        <label>Solution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__SourceContractItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Contract Item</label>
        <referenceTo>REVVY__MnContractItem__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__TierName__c</fullName>
        <description>Pricing Tier of the product captured from RME for Medtech</description>
        <inlineHelpText>&gt;Pricing Tier of the product</inlineHelpText>
        <label>Customer Pricing Tier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__TotalCostPrice__c</fullName>
        <description>Total Cost (taking quantity into account).</description>
        <formula>IF (OR(ISNULL(REVVY__CostPrice__c), ISBLANK(REVVY__CostPrice__c)), 0, (REVVY__CostPrice__c * REVVY__Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Cost (taking quantity into account).</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__TotalDiscountAbsolute__c</fullName>
        <formula>REVVY__Discount_Absolute__c + REVVY__AutoDiscountAbsolute__c + REVVY__VolDiscAbsolute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__TotalDiscount__c</fullName>
        <formula>REVVY__Discount__c + REVVY__AutoDiscount__c + REVVY__VolDisc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Total_Price__c</fullName>
        <description>List price multiplied by quantity.</description>
        <formula>REVVY__Price__c  *  REVVY__Quantity__c</formula>
        <inlineHelpText>List price multiplied by quantity.</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Total_Value_Display_F__c</fullName>
        <formula>IF
(
REVVY__Billing_Frequency_WF__c = &apos;Monthly&apos;, REVVY__Monthly_Total_Value_Display_F__c ,
IF (REVVY__Billing_Frequency_WF__c = &apos;Yearly&apos;, REVVY__Yearly_Total_Value_Display_F__c ,
IF (REVVY__Billing_Frequency_WF__c = &apos;Weekly&apos;, REVVY__Weekly_Total_Value_Display_F__c ,
REVVY__One_Time_Total_Value_Display_F__c
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__UID__c</fullName>
        <description>Unique ID of the BOM from the Configuration Engine.</description>
        <inlineHelpText>Unique ID of the BOM from the Configuration Engine.</inlineHelpText>
        <label>UID Configured BOM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__UISection__c</fullName>
        <description>Name of the UI section that is returned by the product configuration.</description>
        <inlineHelpText>Name of the UI section that is returned by the product configuration.</inlineHelpText>
        <label>Section</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Unit_Price_F__c</fullName>
        <formula>REVVY__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price (Display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Unit_Price__c</fullName>
        <description>Unit price of product (list price less the discount)</description>
        <inlineHelpText>Unit price of product (list price less the discount)</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__VolDiscAbsolute__c</fullName>
        <description>Total volume discount off of list price (e.g., $100 off).</description>
        <inlineHelpText>Total volume discount off of list price (e.g., $100 off).</inlineHelpText>
        <label>Vol. Disc. (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__VolDisc__c</fullName>
        <description>Percentage volume discount off of list price (e.g., 20% off).</description>
        <inlineHelpText>Percentage volume discount off of list price (e.g., 20% off).</inlineHelpText>
        <label>Vol. Disc. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Adjustment1_Absolute_F__c</fullName>
        <description>Adjustment (Abs) that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the adjustment on the main line if the main line is billed Weekly.</description>
        <formula>REVVY__Weekly_Value_Before_Discount_F__c - REVVY__Weekly_Total_Cost_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate adjustment1 on products that are billed on a Weekly basis, shown in currency.</inlineHelpText>
        <label>Weekly Mark-ups (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Adjustment1_F__c</fullName>
        <description>Adjustment (%) that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the adjustment on the main line if the main line is billed Weekly.</description>
        <formula>IF (BLANKVALUE(REVVY__Weekly_Cost_Price_Before_Adjustment_F__c,0)==0, 0,(REVVY__Weekly_Value_Before_Discount_F__c - REVVY__Weekly_Total_Cost_F__c)/REVVY__Weekly_Total_Cost_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjustment that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the adjustment on the main</inlineHelpText>
        <label>Weekly Mark-ups (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Cost_Price_Before_Adjustment_F__c</fullName>
        <description>Cost price of this product before adjustment. If the product is configurable, the cost price includes all sub-lines that are billed on a Weekly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Weekly&apos;, IF(ISBLANK(REVVY__CostPrice__c) &amp;&amp; ISBLANK(REVVY__Weekly_Cost_Price_Before_Adjustment_S__c),null,BLANKVALUE(REVVY__CostPrice__c, 0) + BLANKVALUE(REVVY__Weekly_Cost_Price_Before_Adjustment_S__c, 0)), REVVY__Weekly_Cost_Price_Before_Adjustment_S__c)</formula>
        <inlineHelpText>Cost price of this product before adjustment. If the product is configurable, the cost price includes all sub-lines that are billed on a Weekly basis.</inlineHelpText>
        <label>Weekly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Cost_Price_Before_Adjustment_S__c</fullName>
        <description>Aggregate cost price of all sub-lines in a configurable product that are billed on a Weekly basis.</description>
        <inlineHelpText>Aggregate cost price of all sub-lines in a configurable product that are billed on a Weekly basis.</inlineHelpText>
        <label>Weekly Cost including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Discount_Absolute_F__c</fullName>
        <description>Aggregate discount on products that are billed on a weekly basis, shown in currency.</description>
        <formula>REVVY__Weekly_Price_Before_Discount_F__c - REVVY__Weekly_Extended_Price_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate discount on products that are billed on a weekly basis, shown in currency.</inlineHelpText>
        <label>Weekly Discount (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Discount_F__c</fullName>
        <description>Discount that is applied to a regular product that is billed weekly. If the product is configurable, then the weekly discount field is the discount on all sub-lines (e.g., the components) that are billed weekly, including the discount on the main line if the main line is billed weekly.</description>
        <formula>IF (BLANKVALUE(REVVY__Weekly_Price_Before_Discount_F__c,0)==0, 0,(REVVY__Weekly_Price_Before_Discount_F__c - REVVY__Weekly_Extended_Price_F__c)/REVVY__Weekly_Price_Before_Discount_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount applied to a regular product that is billed weekly. If the product is configurable, this is the discount on all sub-lines (e.g., components) that are billed weekly, including the discount on the main line if the main line is billed weekly.</inlineHelpText>
        <label>Weekly Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Extended_Price_F__c</fullName>
        <description>Sum of the aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed weekly, and the unit price of the configurable product, if the configurable product is billed weekly.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Weekly&apos;,  BLANKVALUE(REVVY__Unit_Price__c, 0) + REVVY__Weekly_Extended_Price_S__c , REVVY__Weekly_Extended_Price_S__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the aggregate extended price of all components of a configurable product, where the components are billed weekly, and the unit price of the configurable product, if the configurable product is billed weekly.</inlineHelpText>
        <label>Weekly Extended Price incl. sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Extended_Price_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed weekly.</description>
        <inlineHelpText>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed weekly.</inlineHelpText>
        <label>Weekly Extended Price all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Margin_Absolute_F__c</fullName>
        <description>Margin (Abs) that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly margin field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the margin on the main line if the main line is billed Weekly.</description>
        <formula>REVVY__Weekly_Total_Value_F__c - REVVY__Weekly_Total_Cost_F__c</formula>
        <inlineHelpText>Aggregate margin on products that are billed on a Weekly basis, shown in currency.</inlineHelpText>
        <label>Weekly Margins (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Margin_F__c</fullName>
        <description>Margin (%) that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly margin field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the margin on the main line if the main line is billed Weekly.</description>
        <formula>IF (BLANKVALUE(REVVY__Weekly_Total_Value_F__c,0)==0, 0,(REVVY__Weekly_Total_Value_F__c - REVVY__Weekly_Total_Cost_F__c)/REVVY__Weekly_Total_Value_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Margin that is applied to a regular product that is billed Weekly. If the product is configurable, then the Weekly margin field is the adjustment on all sub-lines (e.g., the components) that are billed Weekly, including the margin on the main line if the</inlineHelpText>
        <label>Weekly Margins (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Price_Before_Discount_Display_F__c</fullName>
        <formula>REVVY__Weekly_Price_Before_Discount_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Price_Before_Discount_F__c</fullName>
        <description>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a weekly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Weekly&apos;,  BLANKVALUE(REVVY__Price__c, BLANKVALUE(REVVY__Unit_Price__c, 0))  +  REVVY__Weekly_Price_Before_Discount_S__c,  REVVY__Weekly_Price_Before_Discount_S__c)</formula>
        <inlineHelpText>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a weekly basis.</inlineHelpText>
        <label>Weekly List including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Price_Before_Discount_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate list price of all sub-lines in a configurable product that are billed on a weekly basis, before any discounts are applied.</description>
        <inlineHelpText>Aggregate list price of all sub-lines in a configurable product that are billed on a weekly basis, before any discounts are applied.</inlineHelpText>
        <label>Weekly List all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Total_Cost_F__c</fullName>
        <description>Aggregate cost price (cost x quantity) of all products that are billed on a Weekly basis.</description>
        <formula>REVVY__Weekly_Cost_Price_Before_Adjustment_F__c * REVVY__Quantity__c</formula>
        <inlineHelpText>Aggregate cost price (cost price x quantity) of all products that are billed on a Weekly basis.</inlineHelpText>
        <label>Total Weekly Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Total_Value_Display_F__c</fullName>
        <formula>REVVY__Weekly_Total_Value_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Total Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Total_Value_F__c</fullName>
        <description>Aggregate extended price (unit price x quantity) of all products that are billed on a weekly basis after discounts have been applied.</description>
        <formula>REVVY__Weekly_Extended_Price_F__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate extended price (unit price x quantity) of all products that are billed on a weekly basis after discounts have been applied.</inlineHelpText>
        <label>Weekly Total Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Weekly_Unit_Price_F__c</fullName>
        <description>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a Weekly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Weekly&apos;, BLANKVALUE(REVVY__Unit_Price__c, 0) + REVVY__Weekly_Unit_Price_S__c, REVVY__Weekly_Unit_Price_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a Weekly basis.</inlineHelpText>
        <label>Weekly Unit Price including sub-lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>